# Rust

./: .gitignore
ffi/simple_test_c_to_rust/: Cargo.toml  Makefile
ffi/simple_test_c_to_rust/src/: lib.rs  main.c
ffi/simple_test_call_c/: Cargo.toml  build.rs
ffi/simple_test_call_c/c_test/: test.c
ffi/simple_test_call_c/src/: main.rs
macro/: Cargo.toml
macro/codegen/: Cargo.toml
macro/codegen/src/: conf.rs  genstruct.rs  lib.rs  util.rs
macro/codegen/src/structparse/: mod.rs  named.rs  tuple.rs  unit.rs  util.rs
macro/confs/: method.toml
macro/src/: conf.rs  main.rs
